# free-assist

./: README.md
apps/api/: .env.example  Dockerfile  fly.toml  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: dependencies.py
apps/api/app/api/v1/routes/: assistant.py  evaluation.py  experiments.py  health.py  knowledge_base.py  models.py  monitoring.py  stats.py
apps/api/app/core/: config.py  logging.py
apps/api/app/schemas/: assistant.py
apps/api/app/services/: assistant_service.py  inference_client.py  intent_service.py  intent_types.py  openai_fallback.py  stats_service.py
apps/inference/: main.py
apps/mlflow/: Dockerfile  fly.toml
apps/web/: next.config.ts  package-lock.json  package.json  vercel.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(dashboard)/: page.tsx
apps/web/src/components/assistant/: ConfidenceBar.tsx  (+4 more)
apps/web/src/hooks/: useAssistant.ts  useDashboardStats.ts  useExperiments.ts  useKnowledgeBase.ts  useModels.ts  useMonitoring.ts
apps/web/src/lib/: api.ts  utils.ts
apps/web/src/types/: assistant.ts
data/knowledge_base/faq/: freebox_models.md
data/knowledge_base/procedures/: billing.md  box_connectivity.md  cancellation.md
data/simulator/: augment_gpt.py  generate.py
ml/: requirements.txt
ml/evaluation/: evaluate_classifier.py  evaluate_pipeline.py
ml/rag/: indexer.py  pipeline.py
ml/training/: train_intent_classifier.py  train_qlora.py
ml/utils/: mlflow_utils.py  preprocessing.py
scripts/: deploy.sh  generate_traffic.py  run_training.sh  serve_inference.sh  upload_to_hf.py
(+21 files in other folders)
