[project]
name = "freeassist-api"
version = "0.1.0"
description = "FreeAssist — API serving ML models for telecom support"
requires-python = ">=3.11"

# Base = lightweight only (Fly.io lite mode)
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "openai>=1.30.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "structlog>=24.2.0",
  "tenacity>=8.3.0",
]

[project.optional-dependencies]
# Full ML stack — used on Vast.ai, NOT on Fly.io
ml = [
  "torch>=2.3.0",
  "transformers>=4.41.0",
  "sentence-transformers>=3.0.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-huggingface>=0.0.3",
  "langchain-text-splitters>=0.2.0",
  "faiss-cpu>=1.8.0",
  "spacy>=3.7.0",
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "clean-text>=0.6.0",
  "ftfy>=6.2.0",
  "mlflow>=2.13.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
]

dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
